Fix footer alignment.

--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -5,7 +5,6 @@
 * Browsers: last 4 version
 */
 
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 
 /* 
 ** START:
@@ -86,9 +85,8 @@ body {
         display: block !important;
     }
     .footer {
-        display: -webkit-box !important;
-        display: -ms-flexbox !important;
-        display: flex !important;
+        display: -ms-grid !important;
+        display: grid !important;
     }
     body {
         background-color: white;
@@ -411,16 +409,17 @@ span {
     text-align: center;
     color: #fff;
     background-color: black;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 6px 1fr 6px 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-column-gap: 6px;
+       -moz-column-gap: 6px;
+            column-gap: 6px;
 }
 
 .footer>* {
