--- a/docs/css/responsive.css
+++ b/docs/css/responsive.css
@@ -5,7 +5,6 @@
 * Browsers: last 4 version
 */
 
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 
 @media(max-width: 900px) {
     .stack-container {
@@ -136,10 +135,9 @@
         font-size: 16px;
     }
     .footer {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
+        -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+        row-gap: 6px;
     }
 }
 
@@ -196,7 +194,9 @@
         min-height: 480px;
     }
     .links-bar {
+        display: -ms-grid;
         display: grid;
+        -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
         row-gap: 8px;
